# coherence-ai-maturity

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/corpus/: README.md  charte_ia.md  organigramme.md  rapport_audit_2025.md
data/profiles/: README.md
data/referential/: questions.json
data/referential/schema/: questions.schema.json
data/weights/: ahp_pairwise.json
docs/: DESIGN_DECISIONS.md  architecture.md  audit.md  references.bib
docs/methodology/: 00-overview.md  01-referential.md  02-fuzzy-ahp.md  02-fuzzy-scoring.md  03-anfis.md  04-uncertainty.md  05-validation.md  06-graphrag.md  07-roi-montecarlo.md
scripts/: build_graph.py  run_anfis.py  run_report.py  run_scoring_demo.py  run_validation.py  run_web.py  setup.ps1  setup.sh
src/maturai/: __init__.py  config.py
src/maturai/anfis/: __init__.py  model.py  training.py
src/maturai/domain/: __init__.py  fuzzy_number.py  referential.py  responses.py
src/maturai/graphrag/: __init__.py  extract.py  ingest.py  interfaces.py  mock.py  neo4j_client.py  pipeline.py
src/maturai/referential/: __init__.py  loader.py  validators.py
src/maturai/reporting/: __init__.py  generator.py  kpis.py  offline.py
src/maturai/roi/: __init__.py  monte_carlo.py
src/maturai/scoring/: __init__.py  aggregation.py  defuzzification.py  engine.py  fuzzification.py  inference.py  membership.py  results.py
src/maturai/scoring/rules/: __init__.py  incoherence_rules.py
src/maturai/validation/: __init__.py  campaign.py  compare.py  profiles.py
src/maturai/web/: __init__.py  app.py  schemas.py
src/maturai/web/static/: app.js  index.html  styles.css
src/maturai/weighting/: __init__.py  consistency.py  fuzzy_ahp.py
tests/: conftest.py  test_anfis.py  test_campaign.py  test_engine.py  test_fuzzification.py  test_fuzzy_ahp.py  test_fuzzy_number.py  test_graphrag.py  test_inference.py  test_membership.py  test_referential.py  test_reporting.py  test_roi.py  test_validation.py  test_web.py
